[package]
name = "qarax-warp"
version = "0.1.0"
authors = ["Benny Zlotnik <bzlotnik@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
warp = "0.3.1"
sqlx = { version = "0.5.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate", "macros", "offline"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.40"
thiserror = "1.0.26"
tracing = "0.1"
tracing-subscriber = "0.2"
dotenv = "0.15.0"